<resources>
    <string name="app_name">GPA Calculator</string>
    <string name="percentage">Percentage</string>
    <string name="applied_chemostry">Applied Chemostry</string>
    <string name="engineering_graphics">Engineering Graphics</string>
    <string name="environmental_studies">Environmental Studies</string>
    <string name="basic_electrical_engg">Basic Electrical Engg.</string>
    <string name="applied_chemistry_lab">Applied Chemistry Lab</string>
    <string name="engineering_graphics_lab">Engineering Graphics Lab</string>
    <string name="engineering_mathematics_2">Engineering Mathematics-2</string>
    <string name="basic_electrical_engg_lab">Basic Electrical Engg. Lab</string>
    <string name="general_proficiency_1">General Proficiency-1</string>
    <string name="workshop_practice_2">WorkShop Practice-2</string>
    <string name="dsgt">DSGT</string>
    <string name="deld">DELD</string>
    <string name="co">CO</string>
    <string name="oot">OOT</string>
    <string name="gp_2">GP-2</string>
    <string name="fdsp_lab">FDSP Lab</string>
    <string name="sl_1">SL-1</string>
    <string name="fdsp">FDSP</string>
    <string name="oot_lab">OOT Lab</string>
    <string name="nmpt">NMPT</string>
    <string name="dsf">DSF</string>
    <string name="cg">CG</string>
    <string name="dc">DC</string>
    <string name="hss">HSS</string>
    <string name="adl">ADL</string>
    <string name="dsf_lab">DSF Lab</string>
    <string name="cg_lab">CG Lab</string>
    <string name="dc_lab">DC Lab</string>
    <string name="sl_2">SL-2</string>
    <string name="deld_lab">DELD Lab</string>
    <string name="sgpa">SGPA</string>
    <string name="tcs">TCS</string>
    <string name="software_engg">Software Engg.</string>
    <string name="system_programming">System Programming</string>
    <string name="mpmci">MPMCI</string>
    <string name="cnt">CNT</string>
    <string name="web_programming_lab">Web Programming Lab</string>
    <string name="soft_engg_lab">Soft Engg. Lab</string>
    <string name="system_programming_lab">System Programming Lab</string>
    <string name="cnt_lab">CNT Lab</string>
    <string name="mpmci_lab">MPMCI Lab</string>
    <string name="dbms">DBMS</string>
    <string name="daa">DAA</string>
    <string name="aies">AIES</string>
    <string name="fmis">FMIS</string>
    <string name="operating_system">Operating System</string>
    <string name="dbms_lab">DBMS Lab</string>
    <string name="operating_system_lab">Operating System Lab</string>
    <string name="daa_lab">DAA Lab</string>
    <string name="apl">APL</string>
    <string name="miniproject">Miniproject</string>
    <string name="self_study_2">Self Study-2</string>
    <string name="reset">Reset</string>
    <string name="calculate">Calculate</string>
    <string name="compiler_construction">Compiler Construction</string>
    <string name="oomd">OOMD</string>
    <string name="erp">ERP</string>
    <string name="elective_1">Elective-1</string>
    <string name="inter_discilinary_elective">Inter-discilinary Elective</string>
    <string name="compiler_construction_lab">Compiler Construction Lab</string>
    <string name="oomd_lab">OOMD Lab</string>
    <string name="elective_1_lab">Elective 1 Lab</string>
    <string name="project_phase_1">Project Phase-1</string>
    <string name="seminar">Seminar</string>
    <string name="self_study_3">Self Study-3</string>
    <string name="distributed_os">Distributed OS</string>
    <string name="data_warehousinng_and_data_mining">Data Warehousinng and Data Mining</string>
    <string name="elective_2">Elective-2</string>
    <string name="elective_3">Elective-3</string>
    <string name="distributed_os_lab">Distributed OS Lab</string>
    <string name="dwdm_lab">DWDM Lab</string>
    <string name="elective_2_lab">Elective-2 Lab</string>
    <string name="project_phase_2">Project Phase-2</string>
    <string name="industrial_visit_training">Industrial Visit/Training</string>
    <string name="industrial_lectures">Industrial Lectures</string>
    <string name="self_study_4">Self Study-4</string>
    <string name="engineering_mathematics">Engineering Mathematics</string>
    <string name="engineering_mathematics_1">Engineering Mathematics-1</string>
    <string name="applied_chemistry">Applied Chemistry</string>
    <string name="applied_physics">Applied Physics</string>
    <string name="computer_fundamental">Computer Fundamental</string>
    <string name="engineering_mechanics">Engineering Mechanics</string>
    <string name="basic_electronic_engg">Basic Electronic Engg.</string>
    <string name="workshop_practice_1">WorkShop Practice-1</string>
    <string name="applied_physics_lab">Applied Physics Lab</string>
    <string name="computer_fundamental_lab">Computer Fundamental Lab</string>
    <string name="engineering_mechanics_lab">Engineering Mechanics Lab</string>
    <string name="basic_electronics_lab">Basic Electronics Lab</string>
    <string name="fluid_mechanics">Fluid Mechanics</string>
    <string name="engineering_mathematics_3">Engineering Mathematics-3</string>
    <string name="engineering_thermodynamics">Engineering Thermodynamics</string>
    <string name="manufacturing_engg">Manufacturing Engg.</string>
    <string name="strength_of_material">Strength of Material</string>
    <string name="general_profeciency_2">General Profeciency-2</string>
    <string name="fluid_mechanics_lab">Fluid Mechanics Lab</string>
    <string name="et_lab">ET Lab</string>
    <string name="workshop_practice_3">Workshop Practice-3</string>
    <string name="som_lab">SOM Lab</string>
    <string name="emd">EMD</string>
    <string name="theory_of_machines">Theory of Machines</string>
    <string name="advance_manufacturing_process">Advance Manufacturing Process</string>
    <string name="applied_thermodynamics">Applied Thermodynamics</string>
    <string name="machine_drawing">Machine Drawing</string>
    <string name="computer_graphics">Computer Graphics</string>
    <string name="emd_lab">EMD Lab</string>
    <string name="tom_1_lab">TOM-1 Lab</string>
    <string name="workshop_practice_4">Workshop Practice-4</string>
    <string name="at_lab">AT Lab</string>
    <string name="md_lab">MD Lab</string>
    <string name="amp">AMP</string>
    <string name="machine_design_first">Machine Design First</string>
    <string name="theory_of_machine_2">Theory OF Machine-2</string>
    <string name="industrial_engg_and_manag">Industrial Engg. and Manag.</string>
    <string name="msem">MSEM</string>
    <string name="heat_transfer">Heat Transfer</string>
    <string name="mechanical_measurment">Mechanical Measurment</string>
    <string name="md_1_lab">MD-1 Lab</string>
    <string name="tom_2_lab">TOM-2 Lab</string>
    <string name="msem_lab">MSEM Lab</string>
    <string name="heat_transfer_lab">Heat Transfer Lab</string>
    <string name="self_study_1">Self Study-1</string>
    <string name="ice">ICE</string>
    <string name="metrology_quality_control">Metrology Quality Control</string>
    <string name="turbo_machinery">Turbo Machinery</string>
    <string name="machine_design_2">Machine Design-2</string>
    <string name="nacm">NACM</string>
    <string name="ice_lab">ICE Lab</string>
    <string name="mqc_lab">MQC Lab</string>
    <string name="turbo_machinery_lab">Turbo Machinery Lab</string>
    <string name="machine_design_2_lab">Machine Design-2 Lab</string>
    <string name="rac">RAC</string>
    <string name="programming_in_c">Programming in C++</string>
    <string name="cad_cam">CAD/CAM</string>
    <string name="rac_lab">RAC Lab</string>
    <string name="cad_cam_lab">CAD/CAM Lab</string>
    <string name="finite_element_mehtod">Finite Element Mehtod</string>
    <string name="project_financial_management">Project Financial Management</string>
    <string name="finite_element_method">Finite Element Method</string>
    <string name="fem_lab">FEM Lab</string>
    <string name="elective_3_lab">Elective-3 Lab</string>
    <string name="pick_your_semester">Pick Your Semester</string>
    <string name="electrical_machines_and_network">Electrical Machines and Network</string>
    <string name="analog_circuit_and_analysis">Analog Circuit and Analysis</string>
    <string name="measurment_fundamental">Measurment Fundamental</string>
    <string name="computational_method_and_fundamental">Computational Method and Fundamental</string>
    <string name="electrical_machines_and_network_lab">Electrical Machines and Network Lab</string>
    <string name="analog_circuits_and_analysis_lab">Analog Circuits and Analysis Lab</string>
    <string name="measurment_fundamental_lab">Measurment Fundamental Lab</string>
    <string name="computational_method_and_programming_lab">Computational Method and Programming Lab</string>
    <string name="computational_method_and_programming">Computational Method And Programming</string>
    <string name="automatic_control_system">Automatic Control System</string>
    <string name="electronic_instrumentation">Electronic Instrumentation</string>
    <string name="sensors_and_tranceducer">Sensors and Tranceducer</string>
    <string name="digital_circuit_design">Digital Circuit Design</string>
    <string name="programming_in_matlab">Programming in MATLAB</string>
    <string name="automatic_control_system_lab">Automatic Control System Lab</string>
    <string name="electronic_instrumentation_lab">Electronic Instrumentation Lab</string>
    <string name="tranducer_and_tranceducers_lab">Tranducer and Tranceducers Lab</string>
    <string name="digital_circuits_design_lab">Digital Circuits Design Lab</string>
    <string name="industrial_automation_and_management">Industrial Automation and Management</string>
    <string name="control_systme_and_component">Control Systme And Component</string>
    <string name="microcontroller_and_applications">MicroController and Applications</string>
    <string name="power_electronics">Power Electronics</string>
    <string name="instrumentation_in_unit_operation">Instrumentation In Unit Operation</string>
    <string name="control_system_component_lab">Control System Component Lab</string>
    <string name="industrial_automation_and_management_lab">Industrial Automation and Management Lab</string>
    <string name="microcontroller_and_application_lab">MicroController and Application Lab</string>
    <string name="power_electronics_lab">Power Electronics Lab</string>
    <string name="virtual_intrumentation_and_labview">Virtual Intrumentation and Labview</string>
    <string name="digital_control_system">Digital Control System</string>
    <string name="digital_signal_processing">Digital Signal Processing</string>
    <string name="data_communication_and_telemetry">Data Communication and Telemetry</string>
    <string name="analytical_instrumentation">Analytical Instrumentation</string>
    <string name="entrepreneurship_and_business_management">Entrepreneurship and Business Management</string>
    <string name="digital_signal_processing_lab">Digital Signal Processing Lab</string>
    <string name="data_communication_and_telemetry_lab">Data Communication and Telemetry Lab</string>
    <string name="analytical_instrumentation_lab">Analytical Instrumentation Lab</string>
    <string name="electronic_workshop_lab">Electronic Workshop Lab</string>
    <string name="digital_image_processing">Digital Image Processing</string>
    <string name="biomedical_instrumentation">Biomedical Instrumentation</string>
    <string name="project_planning_and_estimation">Project Planning and Estimation</string>
    <string name="plc_and_dcs">PLC and DCS</string>
    <string name="virtual_instrumentation">Virtual Instrumentation</string>
    <string name="industrial_drives_and_control">Industrial Drives and Control</string>
    <string name="network_analysis">Network Analysis</string>
    <string name="network_analysis_lab">Network Analysis Lab</string>
</resources>