<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="com.example.paras.cgpagpa.MechFifthSem">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/machine_design_first"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner1">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/theory_of_machine_2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner2">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/industrial_engg_and_manag"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner3">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/msem"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner4">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/heat_transfer"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth5"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner5">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/mechanical_measurment"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth6"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner6">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/md_1_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner7">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/tom_2_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth8"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner8">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/msem_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth9"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner9">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/heat_transfer_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth10"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner10">

        </Spinner>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/self_study_1"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/meGradeFifth11"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/meFifthSpinner11">

        </Spinner>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="2dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:id="@+id/meFifthSgpa"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:hint="@string/sgpa"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/meFifthPercentage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="47dp"
            android:hint="@string/percentage"
            android:textSize="25sp" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2sp">

        <Button
            android:id="@+id/button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="displayResultMeFifth"
        />

    </RelativeLayout>











</LinearLayout>
