<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.paras.cgpagpa.CsSixSem">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/dbms"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix1"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix1">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/operating_system"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix2"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix2">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/daa"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix3"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix3">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/aies"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix4"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix4">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/fmis"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix5"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix5">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/dbms_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix6"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix6">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/operating_system_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix7"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix7">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/daa_lab"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix8"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix8">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/apl"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix9"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix9">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/miniproject"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix10"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix10">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="305dp"
            android:layout_height="wrap_content"
            android:text="@string/self_study_2"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/csGradeSix11"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text=""
            android:textSize="22sp" />
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/csSpinnerSix11">

        </Spinner>
    </LinearLayout>

    <RelativeLayout
        android:layout_marginTop="5sp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/csSgpaSix"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30dp"
            android:hint="@string/sgpa"
            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/csSixPercentage"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="47dp"
            android:hint="@string/percentage"
            android:textSize="25sp" />

    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2sp">




        <Button
            android:id="@+id/button"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate"
            android:onClick="displayResultCsSix"
         />

    </RelativeLayout>

    </LinearLayout>

</ScrollView>
